fix bug and add foreach