@@ -5,17 +5,16 @@ import ir.maktab.mockdata.MockData;
 import ir.maktab.model.Person;
 import ir.maktab.model.PersonSummary;
 
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.time.LocalDate;
+import java.time.Period;
+import java.time.format.DateTimeFormatter;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class Main {
     public static void main(String[] args) {
 
         List<Person> people = MockData.getPeople();
-
         Main main = new Main();
 
 
@@ -41,12 +40,12 @@ public class Main {
 
         // B-5
 
-        main.getNameToPersonMap(people);
+//        main.getNameToPersonMap(people);
 
 
         // B-6
 
-//        main.getCorrectedPeople(people);
+        main.getCorrectedPeople(people);
 
 
         // B-7
@@ -152,55 +151,96 @@ public class Main {
 
         List<PersonSummary> correctedPeople = people.stream()
 
-                .map(PersonSummary::new)
+                .map(person -> new PersonSummary(person.getId(),
+                        person.getFirstName(), person.getLastName(),
+                        calAge(person.getBirthDate()), person.getGender(),
+                        convertDate(person.getBirthDate())))
 
-                .collect(Collectors.toList());
+                .toList();
 
+        OptionalDouble maleAvgAge
+                = correctedPeople.stream()
+                .filter(personSummary -> personSummary.getGender().equals("Male"))
+                .map(PersonSummary::getAge)
+                .mapToInt(Integer::intValue)
+                .average();
 
-        double averageAge = correctedPeople.stream()
-
-                .filter(person -> person.getGender().equals("M"))
-
-                .mapToInt(PersonSummary::getAge)
-
-                .average()
-
-                .orElse(0);
-
-
-        System.out.println("Average age of men: " + averageAge);
-
-    }
-
-
-    public void getAverageAgeOfMen(List<Person> people) {
-
-        List<Person> filteredPeople = people.stream()
-
-                .filter(person -> person.getAge() <= 50)
-
-                .collect(Collectors.toList());
-
-
-        List<PersonSummary> correctedPeople = filteredPeople.stream()
-
-                .map(PersonSummary::new)
-
-                .collect(Collectors.toList());
-
-
-        double averageAge = correctedPeople.stream()
-
-                .filter(person -> person.getGender().equals("F"))
-
-                .mapToInt(PersonSummary::getAge)
-
-                .average()
-
-                .orElse(0);
-
-
-        System.out.println("Average age of female: " + averageAge);
+        for (PersonSummary correctedPerson : correctedPeople) {
+            System.out.println(correctedPerson);
+        }
+        System.out.println(maleAvgAge);
 
     }
+
+    private static int calAge(String birthDate) {
+        String modifyDate = correctDate(birthDate);
+
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy");
+        formatter = formatter.withLocale(Locale.US);
+        LocalDate date = LocalDate.parse(modifyDate, formatter);
+        LocalDate dateNow = LocalDate.now();
+        return Period.between(date, dateNow).getYears();
+    }
+
+    private static String correctDate(String birthDate) {
+        String d = "";
+        String m = "";
+        String y = "";
+        String modifyDate = "";
+        if (birthDate.length() < 10) {
+            String[] split = birthDate.split("/");
+            y = split[2];
+            if (split[0].length() < 2)
+                d += "0" + split[0];
+            else
+                d = split[0];
+            if (split[1].length() < 2)
+                m += "0" + split[1];
+            else
+                m = split[1];
+            modifyDate = d + "/" + m + "/" + y;
+        } else
+            modifyDate = birthDate;
+        return modifyDate;
+    }
+
+    private static Date convertDate(String birthDate) {
+        String modifyDate = correctDate(birthDate);
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy");
+        formatter = formatter.withLocale(Locale.US);
+        LocalDate date = LocalDate.parse(modifyDate, formatter);
+        Date date1 = java.sql.Date.valueOf(date);
+        return date1;
+    }
+
+//    public void getAverageAgeOfMen(List<Person> people) {
+//
+//        List<Person> filteredPeople = people.stream()
+//
+//                .filter(person -> person.getAge() <= 50)
+//
+//                .toList();
+//
+//
+//        List<PersonSummary> correctedPeople = filteredPeople.stream()
+//
+//                .map(PersonSummary::new)
+//
+//                .toList();
+//
+//
+//        double averageAge = correctedPeople.stream()
+//
+//                .filter(person -> person.getGender().equals("F"))
+//
+//                .mapToInt(PersonSummary::getAge)
+//
+//                .average()
+//
+//                .orElse(0);
+//
+//
+//        System.out.println("Average age of female: " + averageAge);
+//
+//    }
 }
